--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-DB_URI=mongodb://127.0.0.1:27017/new
-# DB_URI=mongodb+srv://kamal659913:x1wcaIAYwaS9fLWq@cluster0.ds3vph6.mongodb.net/?retryWrites=true&w=majority
+DB_URI=mongodb+srv://kamal659913:x1wcaIAYwaS9fLWq@cluster0.ds3vph6.mongodb.net/?retryWrites=true&w=majority
 BACK_END_URL=http://localhost:5000
 FRONT_END_URL=http://localhost:3000
 API_MONGODB_OBJECT_ID=658c1ac43b9561d7d764dddb
